--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -9,7 +9,14 @@
 <body>
     <header>
         <h2><a href="/">Our wonderful App</a></h2>
-        <nav><a href="/login">Login</a></nav>
+        <nav>
+        <% if(user){ %>
+            <a href="/create-post">Create Post</a>
+            <a href="/logout">Log Out</a>
+        <% } else { %>
+            <a href="/login">Login</a>
+        <% } %>
+        </nav>
     </header>
     <main>
         <form action="/register" method="POST">
