--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,23 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
-</head>
+    <%- include("includes/head") %>
 <body>
-    <header>
-        <h2><a href="/">Our wonderful App</a></h2>
-        <nav>
-        <% if(user){ %>
-            <a href="/create-post">Create Post</a>
-            <a href="/logout">Log Out</a>
-        <% } else { %>
-            <a href="/login">Login</a>
-        <% } %>
-        </nav>
-    </header>
+    <%- include("includes/header") %>
+
     <main>
         <form action="/register" method="POST">
         <% errors.forEach( error => { %>
@@ -36,8 +22,7 @@
         </fieldset>
         </form>
     </main>
-    <footer>
-        <small>&copy; Our wonderful app.</small>
-    </footer>
+    <%- include("includes/footer") %>
+
 </body>
 </html>
