--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Document</title>
-</head>
+<%- include("includes/head") %>
 <body>
-    <header>
-        <h2><a href="/">Our wonderful App</a></h2>
-        <nav><a href="/login">Login</a></nav>
-    </header>
+    <%- include("includes/header") %>
     <main>
-        <h3>Login Page</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis exercitationem animi quam, amet quaerat nihil, voluptatibus expedita impedit ducimus a molestias maxime asperiores in magni iusto dolorum beatae quos autem.</p>
+        <form action="/login" method="POST">
+        <% errors.forEach( error => { %>
+            <p class="notice"><%= error %></p>
+        <% }) %>
+        <fieldset>
+            <legend>Log In</legend>
+            <label for="username"><small>Username</small></label>
+            <input type="text" id="username" name="username" autocomplete="off">
+
+            <label for="password"><small>Password</small></label>
+            <input type="password" id="password" name="password" autocomplete="off">
+
+            <br>
+            <button>Log In</button>
+        </fieldset>
+        </form>
     </main>
-    <footer>
-        <small>&copy; Our wonderful app.</small>
-    </footer>
+    <%- include("includes/footer") %>
 </body>
 </html>
