Add post management features: create, edit, delete, and display posts

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,8 +4,18 @@
 <body>
     <%- include("includes/header") %>
     <main>
-        <h2>Welcome to your dashboard!</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus facere quae ullam maxime odio rerum quaerat cumque eveniet, molestias nihil saepe delectus itaque nam hic commodi at provident eos!</p>
+        <% if(posts.length == 0) {%>
+            <h4>Hello <%= user.username %>, you do not have any posts yet.</h4>
+        <% } else { %>
+            <h4>Hello <%= user.username %>, here are your posts.</h4>
+        <% } %>
+        
+        <ul>
+            <% posts.forEach(post => { %>
+                <li><a href="/post/<%= post.id %>"><%= post.title %></a> on <%= new Date(post.createdDate).getMonth() + 1 %>/<%= new Date(post.createdDate).getDate() %>/<%= new Date(post.createdDate).getFullYear() %></li>
+            <% }) %>
+        </ul>
+
     </main>
     <%- include("includes/footer") %>
 </body>
